--- a/Solution.Build.Tests.props
+++ b/Solution.Build.Tests.props
@@ -6,4 +6,8 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
+  <PropertyGroup>
+      <nowarn>CA1707</nowarn>
+  </PropertyGroup>    
+  
 </Project>
