--- a/Tests/RichillCapital.Core.UnitTests/RichillCapital.Core.UnitTests.csproj
+++ b/Tests/RichillCapital.Core.UnitTests/RichillCapital.Core.UnitTests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="../../Solution.Build.Tests.props"/>
+  <Import Project="../../Solution.Build.Tests.props" />
   
   <ItemGroup>
     <PackageReference Include="coverlet.msbuild" Version="6.0.0">
@@ -15,6 +15,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\RichillCapital.Core.csproj" />
   </ItemGroup>
 
 </Project>
