--- a/Tests/RichillCapital.Core.UnitTests/RichillCapital.Core.UnitTests.csproj
+++ b/Tests/RichillCapital.Core.UnitTests/RichillCapital.Core.UnitTests.csproj
@@ -1,24 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <Import Project="../../Solution.Build.Tests.props" />
-  
+<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="../../Solution.Build.Tests.props"/>
   <ItemGroup>
     <PackageReference Include="coverlet.msbuild" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1"/>
+    <PackageReference Include="MSTest.TestFramework" Version="3.1.1"/>
     <PackageReference Include="coverlet.collector" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NSubstitute" Version="5.1.0"/>
   </ItemGroup>
-  
   <ItemGroup>
-    <ProjectReference Include="..\..\RichillCapital.Core.csproj" />
+    <ProjectReference Include="..\..\RichillCapital.Core.csproj"/>
   </ItemGroup>
-
 </Project>
